--- a/rinha-backend/appsettings.Development.json
+++ b/rinha-backend/appsettings.Development.json
@@ -1,8 +1,13 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=Rinha;Username=myuser;Password=mypassword"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
