--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -12,10 +12,14 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./rinha-backend/script.sql:/docker-entrypoint-initdb.d/script.sql
+    networks:
+      - rinha-network
+    command: postgres -c max_connections=1000 -c max_wal_size=4096 -c checkpoint_timeout=600 -c synchronous_commit=off -c effective_cache_size=225MB -c shared_buffers=75MB -c fsync=off -c huge_pages=off -c work_mem=100MB -c maintenance_work_mem=256MB -c effective_io_concurrency=4
 
   rinha-backend-1:
     image: rinha-backend
     build:
+      context: .
       dockerfile: rinha-backend/Dockerfile
     ports:
       - "8081:8080"
@@ -27,12 +31,15 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "0.6"
-          memory: "200MB"
+          cpus: "0.2"
+          memory: "100MB"
+    networks:
+      - rinha-network
 
   rinha-backend-2:
     image: rinha-backend
     build:
+      context: .
       dockerfile: rinha-backend/Dockerfile
     ports:
       - "8082:8080"
@@ -44,8 +51,10 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "0.6"
-          memory: "200MB"
+          cpus: "0.2"
+          memory: "100MB"
+    networks:
+      - rinha-network
 
   nginx:
     image: nginx:latest
@@ -59,8 +68,15 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "0.17"
-          memory: "10MB"
+          cpus: "0.1"
+          memory: "50MB"
+    networks:
+      - rinha-network
+
+networks:
+  rinha-network:
+    driver: bridge
 
 volumes:
   postgres_data:
+    name: my_postgres_data_volume
