--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,11 @@ services:
     ports:
       - "5432:5432"
     volumes:
+      - postgres_data:/var/lib/postgresql/data
       - ./rinha-backend/script.sql:/docker-entrypoint-initdb.d/script.sql
     networks:
       - rinha-network
+    command: postgres -c max_connections=1000 -c max_wal_size=4096 -c checkpoint_timeout=600 -c synchronous_commit=off -c effective_cache_size=225MB -c shared_buffers=75MB -c fsync=off -c huge_pages=off -c work_mem=100MB -c maintenance_work_mem=256MB -c effective_io_concurrency=4
 
   rinha-backend-1:
     image: rinha-backend
@@ -29,8 +31,8 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "0.6"
-          memory: "200MB"
+          cpus: "0.2"
+          memory: "100MB"
     networks:
       - rinha-network
 
@@ -49,8 +51,8 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "0.6"
-          memory: "200MB"
+          cpus: "0.2"
+          memory: "100MB"
     networks:
       - rinha-network
 
@@ -66,8 +68,8 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "0.17"
-          memory: "10MB"
+          cpus: "0.1"
+          memory: "50MB"
     networks:
       - rinha-network
 
@@ -77,3 +79,4 @@ networks:
 
 volumes:
   postgres_data:
+    name: my_postgres_data_volume
